@@ -40,6 +40,11 @@ public:
     virtual wxString GetUserDataDir() const;
     virtual wxString GetPluginsDir() const;
 
+protected:
+    // Ctor is protected, use wxStandardPaths::Get() instead of instantiating
+    // objects of this class directly.
+    wxStandardPaths() { }
+
 private:
     static wxString m_prefix;
 };
